fix menu on mobile click

--- a/app/scss/components/_menu.scss
+++ b/app/scss/components/_menu.scss
@@ -152,6 +152,7 @@
         .nav-items {
           width: 100%;
           margin-top: 30px;
+          z-index: 1;
 
           a {
             font-size: 24px;
